# lingmo-pkgbuild

./: CMakeLists.txt
debian/: changelog  control  copyright  install  rules
po/: CMakeLists.txt
src/: lingmo_pkgbuild.cpp  main.cpp
